<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/rateButton"
            android:textSize="17sp"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:text="@string/rate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:background="@drawable/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/shareButton"
            android:textSize="17sp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:background="@drawable/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/otherAppsButton"
            android:textSize="17sp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/other_apps_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:background="@drawable/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/translatorButton"
            android:textSize="17sp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/translator_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:background="@drawable/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/donateButton"
            android:textSize="17sp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:text="@string/donate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>